--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   text-align: center;
   margin: 20px 0;
 }
+
 .centrar-texto {
   text-align: center;
 }
@@ -19,11 +20,21 @@
   margin: 10px;
 }
 
-/* Estilo general de la página */
+.imagenesSecciones {
+  width: 800px;
+  height: auto;
+  margin: 10px auto;
+  display: block;
+}
+
 body {
   margin: 0px;
-  font-family:Arial, Helvetica, sans-serif;
- background-image: PONER IMAGEN FONDO;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: large;
+  background-image: url('assets/fondo.jpg');
+  background-size: cover;
+  background-position: center;
+
 }
 
 
@@ -36,13 +47,12 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Estilo para el header */
 header {
   text-align: center;
   margin-bottom: 20px;
 }
 
-/* Estilo para el nav */
+
 nav ul {
   display: flex;
   justify-content: center;
@@ -61,22 +71,22 @@ nav ul li a {
 }
 
 .tarjeta-curiosidad {
-    width: auto;
-    padding: 5px;
-    background-color: #eef7ff;
-    border-radius: 15px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ddd;
+  width: auto;
+  padding: 5px;
+  background-color: #eef7ff;
+  border-radius: 15px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
 }
 
 .tarjeta-curiosidad h3 {
-    color: #4a4a4a;
-    margin-bottom: 10px;
+  color: #4a4a4a;
+  margin-bottom: 10px;
 }
 
 .tarjeta-curiosidad p {
-    font-size: 0.9rem;
-    color: #5e5e5e;
+  font-size: 1rem;
+  color: #5e5e5e;
 }
 
 footer {
