--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,98 @@
 #titulo-principal {
-    font-family: Georgia, serif;
-    font-size: 2.5em;
-    color: #4a2f24;
-    text-align: center;
-    margin: 20px 0;
-  }
-  
-  #titulo-principal em {
-    color: #f2b400;
-  }
-  #imagen-titulo {
-    width: 600px;
-    height: auto;
-    margin: 10px;
-    al
+  font-family: Georgia, serif;
+  font-size: 2.5em;
+  color: #4a2f24;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.centrar-texto {
+  text-align: center;
+}
+
+#titulo-principal em {
+  color: #f2b400;
+}
+
+#imagen-titulo {
+  width: 600px;
+  height: auto;
+  margin: 10px;
+}
+
+.imagenesSecciones {
+  width: 800px;
+  height: auto;
+  margin: 10px auto;
+  display: block;
+}
+
+body {
+  margin: 0px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: large;
+  background-image: url('assets/fondo.jpg');
+  background-size: cover;
+  background-position: center;
+
+}
+
+
+.contenido-central {
+  width: 80%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f6ffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+nav ul {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  padding: 0;
+}
+
+nav ul li {
+  margin: 0 15px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #222222;
+  font-weight: bold;
+}
+
+.tarjeta-curiosidad {
+  width: auto;
+  padding: 5px;
+  background-color: #eef7ff;
+  border-radius: 15px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
+}
+
+.tarjeta-curiosidad h3 {
+  color: #4a4a4a;
+  margin-bottom: 10px;
+}
+
+.tarjeta-curiosidad p {
+  font-size: 1rem;
+  color: #5e5e5e;
+}
+
+footer {
+  text-align: center;
+  margin-top: 30px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #222;
+  color: #fff;
 }
